<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Network</string>
    <string name="donate">Donate</string>
    <string name="no_thanks">No Thanks</string>
    <string name="enable_smart_switch">Switch while Screen Off</string>
    <string name="switch_data_connection_type">Switch Network mode while screen Off (Off, 2G/GSM only or your selected screen off mode).</string>
    <string name="default_screen_on_mode">Default screen ON mode</string>
    <string name="select_your_default_screen">Select the default mode on screen ON:\n%s</string>
    <string name="default_screen_off_mode">Default screen Off mode</string>
    <string name="select_your_default_screen_off">Select the default mode on screen Off:\n%s</string>
    <string name="disconnect_wifi">Disconnect WiFi</string>
    <string name="disconnect_from_active_wifi">Disconnect from current WiFi access point when screen if Off.</string>
    <string name="turn_off_wifi">Turn off WiFi</string>
    <string name="turn_off_wifi_service">Turn off WiFi service when screen is Off.</string>
    <string name="about_info">\nMohamed Karami (Wanam)\n@xda-developers @ce4arab \n\nhttp://twitter.com/WanamXda\n</string>
    <string name="rate_app">Rate App</string>
    <string name="white_list_applications">White-list applications</string>
    <string name="wifi_will_not_disconnect_turn_off">WiFi will NOT disconnect/turn Off if the selected applications are running.</string>
    <string name="wifi">WiFi</string>
    <string name="mobile_networks">Mobile Networks</string>
    <string name="mobile_data_will_not_switch_turn_off">Mobile data will NOT switch / turn Off if the selected applications are running.</string>
    <string name="select_all_none">"Select All/None"</string>
    <string name="disable_auto_sync">Disable Auto Sync</string>
    <string name="disable_data_auto_synchronization">Disable data auto sync over mobile networks and WiFi when screen is Off.</string>
    <string name="data_synchronization">Data synchronization</string>
    <string name="switching_delay">Switching delay</string>
    <string name="select_the_delay_smart_network_should_wait">Select the delay screen goes Off before changing mobile network state.</string>
    <string name="sync_deactivation_delay">Sync deactivation delay</string>
    <string name="select_the_delay_screen_goes_off_before_d">Select the delay screen goes Off before disabling auto synchronization.</string>
    <string name="select_the_delay_screen_goes_off_before_c">Select the delay screen goes Off before changing WiFi state.</string>
    <string name="disable_bluetooth">Disable Bluetooth</string>
    <string name="turn_off_bluetooth_when_screen_is_off">Turn off Bluetooth when screen is Off</string>
    <string name="turn_off_nfc">Turn off NFC</string>
    <string name="turn_off_nfc_when_screen_is_off">Turn off NFC when screen is Off</string>
    <string name="turn_off_delay">Turn off delay</string>
    <string name="select_the_delay_screen_goes_off_b">Select the delay screen goes Off before changing NFC state.</string>
    <string name="select_the_delay_screen_bluetooth_state">Select the delay screen goes Off before changing Bluetooth state.</string>
    <string name="nfc">NFC</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="keep_on_wifi_ap">Keep on WiFi AP</string>
    <string name="keep_current_mobile_data_state_while_wifi">Do NOT change current mobile data state while WiFi AP tethering is enabled</string>
    <string name="keep_on_active_call">Keep on active Call</string>
    <string name="keep_current_mobile_data_call_is_active">Do NOT change current mobile data state when a Call is active</string>
    <string name="wifi_ap_whitelist">WiFi SSID white-list</string>
    <string name="wifi_state_will_not_change_if_one_of">WiFi state will not change if one of the white-listed WiFi access points is connected</string>
    <string name="switch_while_wifi_is_connected">Switch while WiFi is connected</string>
    <string name="switch_mobile_network_mode_to_screen_off">Turn off or Switch mobile network mode to screen Off mode when WiFi is connected.</string>
    <string name="minutes">minutes</string>
    <string name="keep_while_charging">Keep while charging</string>
    <string name="do_not_switch_turn_off_mobile_data">Do NOT switch/turn off mobile data while the device is plugged to USB/AC</string>
    <string name="do_not_disconnect_turn_off_wifi">Do NOT disconnect/turn off WiFi while the device is plugged to USB/AC</string>
    <string name="activation_timer">Activation timer</string>
    <string name="enable_data_synchronization_for">Enable Data synchronization for a specific duration during screen Off.</string>
    <string name="deactivation_interval">Deactivation Interval</string>
    <string name="keep_data_synchronization_disabled_for">Keep data synchronization disabled for</string>
    <string name="activation_duration">Activation duration</string>
    <string name="then_keep_data_synchronization_enabled_for">Then keep data synchronization enabled for</string>
    <string name="enable_mobile_data_higher_network_mode">Enable mobile data (higher network mode) for a specific duration during screen Off.</string>
    <string name="keep_mobile_data_higher_network">Keep mobile data (higher network mode) disabled for</string>
    <string name="then_keep_mobile_data_higher_network">Then keep mobile data (higher network mode) enabled for</string>
    <string name="enable_wifi_for_a_specific_duration">Enable WiFi for a specific duration during screen Off.</string>
    <string name="keep_wifi_disabled_for">Keep WiFi disabled for</string>
    <string name="then_keep_wifi_enabled_for">Then keep WiFi enabled for</string>
    <string name="do_not_turn_off_synchronization_while">Do NOT turn off synchronization while the device is plugged to USB/AC</string>
    <string name="timer">Timer</string>
    <string name="master_switch">Master switch</string>
    <string name="enable_smart_network_module">Enable Smart Network module</string>
    <string name="wait_until_screen_unlock">Wait until screen unlock</string>
    <string name="wait_for_screen_unlock_before_turning">Wait for screen unlock before turning ON services.</string>
    <string name="keep_manual_settings">Keep manual settings</string>
    <string name="beta_prevent_data_wifi">Prevent Data, Sync, GPS, WiFi, NFC and Bluetooth services from being enabled when you manually deactivate them</string>
    <string name="smart_is_not_active">Smart network is NOT active! Make sure Xposed framework is installed, this module is enabled on Xposed installer then REBOOT.</string>
    <string name="turn_off_gps">Switch GPS mode</string>
    <string name="turn_off_gps_when_screen_is_off">Switch GPS mode when screen is Off</string>
    <string name="select_the_delay_screen_goes_off_gps">Select the delay screen goes Off before changing GPS state.</string>
    <string name="gps">GPS</string>
    <string name="gps_will_not_disconnect_turn_off">GPS status will NOT changes if the selected applications are running.</string>
    <string name="white_list_devices">White-list devices</string>
    <string name="bt_will_not_disconnect_turn_off">Bluetooth will NOT turn Off if the selected devices are paired.</string>
    <string name="please_enable_bluetooth">Please enable Bluetooth to get the paired devices list.</string>
    <string name="a_required_permission_was_not_granted_">A required permission was NOT granted!</string>

</resources>